--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <div class="section">
             <h2 data-ar="المنتجات" data-en="Products">المنتجات</h2>
             <div class="products">
-                <div class="product"> <img src="C:\Users\DELL\Desktop\spices factory\\salt.png">
+                <div class="product"> <img src="images/salt.png" alt="Salt">
                     <h3 data-ar="ملح مجفف عالي الجودة" data-en="Premium Dried Salt">
                         ملح مجفف عالي الجودة
                     </h3>
@@ -294,7 +294,7 @@
                         إضافة إلى السلة
                     </button>
                 </div>
-                <div class="product"> <img src="C:\Users\DELL\Desktop\spices factory\\potato spices.png">
+                <div class="product"> <img src="images/potato spices.png" alt="Potato Seasoning">
                     <h3 data-ar="ملح مجفف عالي الجودة" data-en="Premium Dried Salt">
                         بهار بطاطس جبنه
                     </h3>
@@ -307,7 +307,7 @@
                         إضافة إلى السلة
                     </button>
                 </div>
-                <div class="product"> <img src="C:\Users\DELL\Desktop\spices factory\\parpecu sauce.png">
+                <div class="product"> <img src="images/parpecu sauce.png" alt="Parpecu Sauce">
                     <h3 data-ar="ملح مجفف عالي الجودة" data-en="Premium Dried Salt">
                         بهار باربيكيو
                     </h3>
