--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <div class="section">
             <h2 data-ar="المنتجات" data-en="Products">المنتجات</h2>
             <div class="products">
-                <div class="product"> <img src="images/salt.png" alt="Salt">
+                <div class="product"> <img src="./images/salt.png" alt="Salt">
                     <h3 data-ar="ملح مجفف عالي الجودة" data-en="Premium Dried Salt">
                         ملح مجفف عالي الجودة
                     </h3>
@@ -294,7 +294,7 @@
                         إضافة إلى السلة
                     </button>
                 </div>
-                <div class="product"> <img src="images/potato spices.png" alt="Potato Seasoning">
+                <div class="product"> <img src="./images/potato spices.png" alt="Potato Seasoning">
                     <h3 data-ar="ملح مجفف عالي الجودة" data-en="Premium Dried Salt">
                         بهار بطاطس جبنه
                     </h3>
@@ -303,11 +303,11 @@
                         55 جنيه / كجم
                     </p>
 
-                    <button class="whatsapp-btn" onclick="addToCart('بهار بطاطس جبنه', 55)">
+                    <button class="whatsapp-btn" onclick="addToCart('بهار بطاطس جبنه', 55)" data-ar = "إضافة إلى السلة" data-en = "Add to cart">
                         إضافة إلى السلة
                     </button>
                 </div>
-                <div class="product"> <img src="images/parpecu sauce.png" alt="Parpecu Sauce">
+                <div class="product"> <img src="./images/parpecu sauce.png" alt="Parpecu Sauce">
                     <h3 data-ar="ملح مجفف عالي الجودة" data-en="Premium Dried Salt">
                         بهار باربيكيو
                     </h3>
@@ -316,66 +316,69 @@
                         60 جنيه / كجم
                     </p>
 
-                    <button class="whatsapp-btn" onclick="addToCart('بهار باربيكيو', 60)">
+                    <button class="whatsapp-btn" onclick="addToCart('بهار باربيكيو', 60)"data-ar = "إضافة إلى السلة" data-en = "Add to cart">
                         إضافة إلى السلة
                     </button>
                 </div>
             </div>
         </div>
         <div class="section features">
-            <h2>لماذا نحن؟</h2>
+            <h2 data-ar="لماذا نحن؟" data-en="Why Choose Us?">
+                لماذا نحن؟
+            </h2>
+            
             <ul>
-                <li>✔ جودة ثابتة ومعايير تصنيع عالية</li>
-                <li>✔ أسعار جملة تنافسية</li>
-                <li>✔ توريد سريع داخل جميع المحافظات</li>
-                <li>✔ إمكانية تصنيع خلطات خاصة حسب الطلب</li>
+                <li data-ar = "✔ جودة ثابتة ومعايير تصنيع عالية" data-en = "✔ Consistent quality and high manufacturing standards">✔ جودة ثابتة ومعايير تصنيع عالية</li>
+                <li data-ar = "✔ أسعار جملة تنافسية" data-en = "✔ Competitive wholesale prices">✔ أسعار جملة تنافسية</li>
+                <li data-ar = "✔ توريد سريع داخل جميع المحافظات" data-en = "✔ Fast delivery within all governorates">✔ توريد سريع داخل جميع المحافظات</li>
+                <li data-ar = "✔ إمكانية تصنيع خلطات خاصة حسب الطلب" data-en="✔ The possibility of manufacturing special mixtures according to demand">✔ إمكانية تصنيع خلطات خاصة حسب الطلب</li>
             </ul>
         </div>
         <div class="section">
-            <h2>توريد مصانع وطلبات جملة</h2>
-            <p>نوفر تعاقدات طويلة المدى للمصانع والمطاعم وسلاسل المحلات مع أسعار خاصة حسب الكمية.</p> <a
-                class="whatsapp-btn" href="https://wa.me/201000746549">تواصل مع قسم المبيعات</a>
+            <h2 data-ar = "توريد مصانع وطلبات جملة" data-en = "Supplying factories and wholesale orders">توريد مصانع وطلبات جملة</h2>
+            <p data-ar = "نوفر تعاقدات طويلة المدى للمصانع والمطاعم وسلاسل المحلات مع أسعار خاصة حسب الكمية." data-en = "We provide long-term contracts for factories, restaurants and chain stores with special prices based on quantity.">نوفر تعاقدات طويلة المدى للمصانع والمطاعم وسلاسل المحلات مع أسعار خاصة حسب الكمية.</p> 
+            <!-- <a class="whatsapp-btn" href="https://wa.me/201000746549">تواصل مع قسم المبيعات</a> -->
         </div>
         <div class="section">
-            <h2>شهادات الجودة</h2>
-            <p>نلتزم بتطبيق معايير السلامة الغذائية ونوفر شهادات جودة عند الطلب.</p>
+            <h2 data-ar = "شهادات الجودة" data-en = "Quality certificates">شهادات الجودة</h2>
+            <p data-ar = "نلتزم بتطبيق معايير السلامة الغذائية ونوفر شهادات جودة عند الطلب." data-en = "We are committed to applying food safety standards and provide quality certificates upon request.">نلتزم بتطبيق معايير السلامة الغذائية ونوفر شهادات جودة عند الطلب.</p>
         </div>
         <div class="section">
-            <h2>تحميل كتالوج المنتجات</h2>
-            <p>يمكنك تحميل كتالوج كامل بجميع المنتجات والمواصفات.</p> <a class="whatsapp-btn" href="#">تحميل الكتالوج
-                PDF</a>
+            <h2 data-ar = "تحميل كتالوج المنتجات" data-en = "Download the product catalog">تحميل كتالوج المنتجات</h2>
+            <p data-ar = "يمكنك تحميل كتالوج كامل بجميع المنتجات والمواصفات." data-en = "You can download a complete catalog with all products and specifications.">يمكنك تحميل كتالوج كامل بجميع المنتجات والمواصفات.</p> 
+            <a class="whatsapp-btn" href="#" data-ar="تحميل الكتالوجPDF" data-en = "Download the catalog (PDF)">تحميل الكتالوجPDF</a>
         </div>
         <div class="section">
-            <h2>طلب توريد / نموذج طلب مباشر</h2>
+            <h2 data-ar = "طلب توريد / نموذج طلب مباشر" data-en = "Supply Request / Direct Order Form">طلب توريد / نموذج طلب مباشر</h2>
             <form>
                 <p><input type="text" id="clientName" placeholder="الاسم"
-                        style="width:100%;padding:10px;margin-bottom:10px"></p>
+                        style="width:100%;padding:10px;margin-bottom:10px" data-ar = "الاسم" data-en = "name"></p>
                 <p><input type="text" id="clientCompany" placeholder="اسم الشركة أو المطعم"
-                        style="width:100%;padding:10px;margin-bottom:10px"></p>
+                        style="width:100%;padding:10px;margin-bottom:10px" data-ar = "اسم الشركة أو المطعم" data-en = "Name of the company or restaurant"></p>
                 <p><input type="tel" id="clientPhone" placeholder="رقم الهاتف"
-                        style="width:100%;padding:10px;margin-bottom:10px"></p>
+                        style="width:100%;padding:10px;margin-bottom:10px" data-ar = "رقم الهاتف" data-en = "phone number"></p>
 
             </form>
         </div>
         <div class="section">
-            <h2>تحسين الظهور على Google (SEO)</h2>
-            <p>الموقع مجهز بعنوان واضح ووصف مناسب لمحركات البحث لزيادة الوصول للعملاء.</p>
+            <h2 data-ar = "تحسين الظهور على Google (SEO)" data-en = "Improving Google visibility (SEO)">تحسين الظهور على Google (SEO)</h2>
+            <p data-ar = "الموقع مجهز بعنوان واضح ووصف مناسب لمحركات البحث لزيادة الوصول للعملاء." data-en = "The website is equipped with a clear title and description suitable for search engines to increase customer reach.">الموقع مجهز بعنوان واضح ووصف مناسب لمحركات البحث لزيادة الوصول للعملاء.</p>
             <ul>
-                <li>✔ كلمات مفتاحية خاصة بالتوابل وبهارات البطاطس</li>
-                <li>✔ سرعة تحميل عالية</li>
-                <li>✔ تصميم مناسب للموبايل</li>
+                <li data-ar = "✔ كلمات مفتاحية خاصة بالتوابل وبهارات البطاطس" data-en = "✔ Keywords related to spices and potato seasonings">✔ كلمات مفتاحية خاصة بالتوابل وبهارات البطاطس</li>
+                <li data-ar = "✔ سرعة تحميل عالية" data-en = "✔ High download speed">✔ سرعة تحميل عالية</li>
+                <li data-ar = "✔ تصميم مناسب للموبايل" data-en = "✔ Mobile-friendly design">✔ تصميم مناسب للموبايل</li>
             </ul>
         </div>
         <div class="section">
-            <h2>تواصل معنا</h2>
-            <p>📞 هاتف: 0237778509</p>
-            <p>📱 واتساب: 201000746549</p>
-            <p>📍 العنوان: المنطقة الصناعية – مصر</p>
-            <p style="font-size:14px">Domain Ready – الموقع جاهز للرفع على أي استضافة وربطه بدومين رسمي</p>
+            <h2 data-ar = "تواصل معنا" data-en = "Contact us">تواصل معنا</h2>
+            <p data-ar = "📞 هاتف: 0237778509" data-en = "📞 mobile : 0237778509">📞 هاتف: 0237778509</p>
+            <p data-ar = "📱 واتساب: 201000746549" data-en = "📱 WhatsApp: 201000746549">📱 واتساب: 201000746549</p>
+            <p data-ar = "📍 العنوان: المنطقة الصناعية – مصر" data-en = "📍 Address: Industrial Zone – Egypt">📍 العنوان: المنطقة الصناعية – مصر</p>
+            <p style="font-size:14px" data-ar = "Domain Ready – الموقع جاهز للرفع على أي استضافة وربطه بدومين رسمي" data-en = "Domain Ready – The website is ready to be uploaded to any hosting service and linked to an official domain.">Domain Ready – الموقع جاهز للرفع على أي استضافة وربطه بدومين رسمي</p>
         </div>
     </div>
     <footer>
-        <p>© 2026 جميع الحقوق محفوظة – مصنع التوابل والبهارات</p>
+        <p data-ar = "© 2026 جميع الحقوق محفوظة – مصنع التوابل والبهارات" data-en = "© 2026 All rights reserved – Spices and Seasonings Factory">© 2026 جميع الحقوق محفوظة – مصنع التوابل والبهارات</p>
     </footer>
 
     <div class="cart-icon">
@@ -383,25 +386,48 @@
         <span class="cart-count">0</span>
     </div>
     <div class="cart-page" id="cartPage">
-        <h2>🛒 سلة الطلب / Cart</h2>
+        <h2 data-ar = "سلة الطلب / Cart" data-en = "Order Cart">🛒 سلة الطلب / Cart</h2>
         <div id="cartItems"></div>
         <h3 id="totalPrice"></h3>
-        <button class="whatsapp-btn" onclick="sendWhatsApp()">إرسال الطلب عبر واتساب</button>
-        <button class="close-cart" onclick="toggleCart()">إغلاق</button>
+        <button class="whatsapp-btn" onclick="sendWhatsApp()" data-ar="إرسال الطلب عبر واتساب" data-en = "Send the order via WhatsApp">إرسال الطلب عبر واتساب</button>
+        <button class="close-cart" onclick="toggleCart()"data-ar = "إغلاق" data-en = "closing">إغلاق</button>
     </div>
 
     <div id="toast"></div>
-    <button class="whatsapp-btn" onclick="sendEmail()">✉️ إرسال عبر البريد</button>
+    <button class="whatsapp-btn" onclick="sendEmail()" data-ar = "إرسال عبر البريد" data-en="Send via mail">✉️ إرسال عبر البريد</button>
     <div id="adminPanel">
-        <h2>لوحة تحكم الطلبات</h2>
+        <h2 data-ar = "لوحة تحكم الطلبات" data-en = "Orders control panel">لوحة تحكم الطلبات</h2>
         <div id="ordersList"></div>
     </div>
-    <button onclick="clearAllOrders()" class="btn" style="background:#444">
+    <button onclick="clearAllOrders()" class="btn" style="background:#444" data-ar = "مسح جميع الطلبات" data-en = "Clear all orders">
         🗑️ مسح جميع الطلبات
     </button>
 
 
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
     <script>
+        (function () {
+            emailjs.init("goMicYBoyJp8gB0HI");
+        })();
+    </script>
+
+    <script>
+        function sendEmail() {
+            emailjs.send("A.Mohamed14", "AdhamID", {
+                name: document.getElementById("clientName").value,
+                company: document.getElementById("clientCompany").value,
+                phone: document.getElementById("clientPhone").value,
+                order: localStorage.getItem("cart")
+            }).then(
+                function () {
+                    alert("تم إرسال الطلب بنجاح ✅");
+                    localStorage.clear();
+                },
+                function (error) {
+                    alert("حدث خطأ ❌");
+                }
+            );
+        }
         function clearAllOrders() {
             if (confirm("هل أنت متأكد من مسح جميع الطلبات؟")) {
                 localStorage.removeItem("orders");
