--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
         <h2 data-ar="لوحة تحكم الطلبات" data-en="Orders control panel">لوحة تحكم الطلبات</h2>
         <div id="ordersList"></div>
     </div>
-    <button onclick="clearAllOrders()" class="btn" style="background:#444" data-ar="مسح جميع الطلبات"
+    <button onclick="clearAllOrders()" class="btn" style="background:#000000 ; color :#fff" data-ar="مسح جميع الطلبات"
         data-en="Clear all orders">
         🗑️ مسح جميع الطلبات
     </button>
