--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                         إضافة إلى السلة
                     </button>
                 </div>
-                <div class="product"> <img src="./images/potato spices.png" alt="Potato Seasoning">
+                <div class="product"> <img src="./images/potato_spices.png" alt="Potato Seasoning">
                     <h3 data-ar="بهار بطاطس جبنه" data-en="Potatos Cheese Spicy">
                         بهار بطاطس جبنه
                     </h3>
@@ -308,7 +308,7 @@
                         إضافة إلى السلة
                     </button>
                 </div>
-                <div class="product"> <img src="./images/parpecu sauce.png" alt="Parpecu Sauce">
+                <div class="product"> <img src="./images/parpecu_sauce.png" alt="Parpecu Sauce">
                     <h3 data-ar="بهار باربيكيو" data-en="Barbecu Sauce">
                         بهار باربيكيو
                     </h3>
